@@ -20,7 +20,7 @@ Free Software Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA
 
 */
 
-// Tags: JDK1.2
+// Tags: not-a-test
 
 package gnu.testlet.javax.swing.JLabel;
 
